--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -51,6 +51,7 @@ p {
   max-width: 1200px;
   margin: 0 auto;
   margin-top:10px;
+  float: center;
 }
 
 @media all and (max-width: 500px) {
@@ -66,4 +67,15 @@ p {
 #graphic {
   margin: 0 auto;
 }
+
+#area{
+  margin: 0 auto;
+  margin-top: 20%;
+  color: #819090;
+  background-color: salmon;
+  width: 50%;
+  height: 300px;
+  padding: 20px 20px;
+}
+
 
