adds force layout

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -70,8 +70,8 @@ p {
 
 #area{
   margin: 0 auto;
-  margin-top: 20%;
-  color: #819090;
+  margin-top: 10%;
+  color: #CB4B19;
   background-color: salmon;
   width: 50%;
   height: 300px;
